--- a/fxbase-spring-boot/pom.xml
+++ b/fxbase-spring-boot/pom.xml
@@ -33,6 +33,21 @@
 		</dependency>
 		 
 	</dependencies>
+	
+	<build>
+	 <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                    <include>**/*.css</include>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+            
+        </resources>
+	
+	</build>
   
 
 </project>
