--- a/fxbase-spring-boot/pom.xml
+++ b/fxbase-spring-boot/pom.xml
@@ -39,9 +39,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>**/*.fxml</include>
-                    <include>**/*.css</include>
-                    <include>**/*.properties</include>
+                	<include>**/*.*</include>
                 </includes>
             </resource>
         </resources>
